--- a/eas.json
+++ b/eas.json
@@ -8,29 +8,39 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "333073812709-n6n0mlheepckq6vka0as7f8jn4ps1epr.apps.googleusercontent.com",
-        "EXPO_PUBLIC_GOOGLE_DRIVE_FOLDER_ID": "1_Db4qJMQ-TWenhkbu9tVINt1K7xtzrbO"
+        "EXPO_PUBLIC_SUPABASE_URL": "https://woedxvcucmgeyfoocvnr.supabase.co",
+        "EXPO_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_CrIp_-jybjLxQzexFIMqhQ_vSXLjXOt",
+        "EXPO_PUBLIC_SUPABASE_STORAGE_BUCKET": "tournament-players"
       }
     },
     "preview": {
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "333073812709-n6n0mlheepckq6vka0as7f8jn4ps1epr.apps.googleusercontent.com",
-        "EXPO_PUBLIC_GOOGLE_DRIVE_FOLDER_ID": "1_Db4qJMQ-TWenhkbu9tVINt1K7xtzrbO"
+        "EXPO_PUBLIC_SUPABASE_URL": "https://woedxvcucmgeyfoocvnr.supabase.co",
+        "EXPO_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_CrIp_-jybjLxQzexFIMqhQ_vSXLjXOt",
+        "EXPO_PUBLIC_SUPABASE_STORAGE_BUCKET": "tournament-players"
       }
     },
     "production": {
       "ios": {
         "env": {
-          "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "333073812709-6gfj6n431ve0698u3h4g3kings5ld2s5.apps.googleusercontent.com",
-          "EXPO_PUBLIC_GOOGLE_DRIVE_FOLDER_ID": "1_Db4qJMQ-TWenhkbu9tVINt1K7xtzrbO"
+          "EXPO_PUBLIC_SUPABASE_URL": "https://woedxvcucmgeyfoocvnr.supabase.co",
+          "EXPO_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_CrIp_-jybjLxQzexFIMqhQ_vSXLjXOt",
+          "EXPO_PUBLIC_SUPABASE_STORAGE_BUCKET": "tournament-players"
         }
       },
       "android": {
         "env": {
-          "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "333073812709-0dpu5urrrmampe8uph3ov9lclba6ucvo.apps.googleusercontent.com",
-          "EXPO_PUBLIC_GOOGLE_DRIVE_FOLDER_ID": "1_Db4qJMQ-TWenhkbu9tVINt1K7xtzrbO"
+          "EXPO_PUBLIC_SUPABASE_URL": "https://woedxvcucmgeyfoocvnr.supabase.co",
+          "EXPO_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_CrIp_-jybjLxQzexFIMqhQ_vSXLjXOt",
+          "EXPO_PUBLIC_SUPABASE_STORAGE_BUCKET": "tournament-players"
         }
+      }
+    },
+    "apk": {
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
       }
     }
   },
